force-app/main/default/objects/Apttus_Config2__PriceListItem__c/fields/Apttus_Config2__SalesOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SalesOrderQuantity__c</fullName>
    <description>The Total quantity for which sales orders have already been created against the contract price list Item</description>
    <inlineHelpText>The Total quantity for which sales orders have already been created against the contract price list Item</inlineHelpText>
    <label>Sales Order Quantity (Deprecated)</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>