force-app/main/default/objects/Apttus_Config2__PriceListItem__c/fields/Apttus_Config2__Taxable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Taxable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the price item is taxable</description>
    <inlineHelpText>Indicates whether the price item is taxable</inlineHelpText>
    <label>Taxable ?</label>
    <type>Checkbox</type>
</CustomField>