force-app/main/default/objects/Apttus_Config2__PriceListItem__c/fields/Apttus_Config2__TaxCodeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TaxCodeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the tax code associated with the price item. Only applicable for taxable items.</description>
    <inlineHelpText>ID of the tax code associated with the price item. Only applicable for taxable items.</inlineHelpText>
    <label>Tax Code</label>
    <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
    <relationshipLabel>Price List Items</relationshipLabel>
    <relationshipName>PriceListItems</relationshipName>
    <type>Lookup</type>
</CustomField>