force-app/main/default/objects/Apttus_Config2__PriceListItem__c/fields/Apttus_Config2__UBARAccountRuleId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__UBARAccountRuleId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the unbilled A/R account rule</description>
    <inlineHelpText>ID of the unbilled A/R account rule</inlineHelpText>
    <label>Unbilled A/R Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Apttus_Config2__GLAccountMapRule__c.Apttus_Config2__GLAccountType__c</field>
            <operation>equals</operation>
            <value>Unbilled A/R Account</value>
        </filterItems>
        <infoMessage>Please select an Unbilled A/R Account Rule</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
    <relationshipLabel>Price List Items (Unbilled A/R Account)</relationshipLabel>
    <relationshipName>PriceListItemsUBAR</relationshipName>
    <type>Lookup</type>
</CustomField>